[gd_scene load_steps=7 format=3 uid="uid://cps6kipdhiyx"]

[ext_resource type="Script" uid="uid://dcmjj2ag4mlnq" path="res://scripts/utils/ui/player_ui.gd" id="1_4lyb8"]
[ext_resource type="Texture2D" uid="uid://c6scl04psfvm7" path="res://assets/ui_interface/Wenrexa Interface UI KIT #4/PNG/ProgressBar_01/BarV1_Bar.png" id="2_plq6t"]
[ext_resource type="Texture2D" uid="uid://clt4nhsj1q118" path="res://assets/ui_interface/Wenrexa Interface UI KIT #4/PNG/ProgressBar_01/BarV1_ProgressBarBorder.png" id="3_hno6o"]
[ext_resource type="Texture2D" uid="uid://bdlmy350on5h" path="res://assets/ui_interface/Wenrexa Interface UI KIT #4/PNG/BarV1_ProgressBar.png" id="4_qoh0o"]
[ext_resource type="FontFile" uid="uid://on5pnthgw80n" path="res://assets/fonts/Stacked pixel.ttf" id="5_hno6o"]
[ext_resource type="Texture2D" uid="uid://dnkehyfnqhquk" path="res://assets/ui_borders/PNG/Default/Transparent border/panel-transparent-border-014.png" id="6_qoh0o"]

[node name="player_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_4lyb8")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 1279.0
offset_bottom = 92.0

[node name="ProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 17.0
offset_right = 289.0
offset_bottom = 44.0
texture_under = ExtResource("2_plq6t")
texture_over = ExtResource("3_hno6o")
texture_progress = ExtResource("4_qoh0o")

[node name="ATP_ENERGY" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 48.0
offset_right = 119.0
offset_bottom = 71.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_hno6o")
theme_override_font_sizes/font_size = 30
text = "ATP ENERGY: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 49.0
offset_right = 332.0
offset_bottom = 74.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_hno6o")
theme_override_font_sizes/font_size = 30
vertical_alignment = 1

[node name="Base" type="NinePatchRect" parent="."]
self_modulate = Color(0.11270533, 0.38001224, 0.2901347, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -218.25
offset_top = 11.0
offset_right = 218.25
offset_bottom = 81.0
grow_horizontal = 2
texture = ExtResource("6_qoh0o")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="PhaseLabel" type="Label" parent="Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_hno6o")
theme_override_font_sizes/font_size = 40
text = "PHASE"

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 236.0
offset_top = -330.0
offset_right = 375.5
offset_bottom = -297.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_hno6o")
theme_override_font_sizes/font_size = 20
text = "TIMER: 1000S"
vertical_alignment = 1

[node name="Deliveries" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 404.0
offset_top = -330.0
offset_right = 599.0
offset_bottom = -297.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("5_hno6o")
theme_override_font_sizes/font_size = 20
text = "DELIVERERED MRNA 0/4:"
vertical_alignment = 1
